RESOLVED FIXED104453
Fix frame border painting in tiled drawing mode
https://bugs.webkit.org/show_bug.cgi?id=104453
Summary Fix frame border painting in tiled drawing mode
Simon Fraser (smfr)
Reported 2012-12-08 12:34:28 PST
Fix frame border painting in tiled drawing mode
Attachments
Patch (3.17 KB, patch)
2012-12-08 12:38 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2012-12-08 12:38:40 PST
Simon Fraser (smfr)
Comment 2 2012-12-08 12:39:15 PST
Simon Fraser (smfr)
Comment 3 2012-12-08 12:40:08 PST
The border repaint code was originally added via bug 13783.
mitz
Comment 4 2012-12-09 11:27:28 PST
Comment on attachment 178371 [details] Patch r=me assuming you tested that it still behaves correctly in WebKit1.
Simon Fraser (smfr)
Comment 5 2012-12-10 15:45:42 PST
Note You need to log in before you can comment on or make changes to this bug.